# lumi-voxel

./: .cproject  .gitignore  .mxproject  .project  CMakeLists.txt  STM32H725RGVX_FLASH.ld  lumi-voxel.ioc
BlueNRG_2/App/: app_bluenrg_2.c  app_bluenrg_2.cpp  app_bluenrg_2.h  app_state.h  gatt_db.c  gatt_db.h
Core/Inc/: RTE_Components.h  adc_handle.hpp  adc_ref.hpp  animator.hpp  custom_conf.h  droplet_animation.hpp  goldfish_animation.hpp  lp5890.hpp  lp5899.hpp  main.h  rubiks_cube_animation.hpp  stm32h7xx_hal_conf.h  stm32h7xx_it.h
Core/Inc/lp5890/: mappings.hpp  registers.hpp
Core/Src/: adc_handle.cpp  adc_ref.cpp  custom_bus.c  droplet_animation.cpp  goldfish_animation.cpp  lp5890.cpp  lp5899.cpp  main-GALLEON.c  main.c  rubiks_cube_animation.cpp  run.cpp  stm32h7xx_hal_msp.c  stm32h7xx_it.c  syscalls.c
Core/Startup/: startup_stm32h725rgvx.s
Drivers/BSP/custom/: custom.c  custom.h
cmake/: gcc-arm-none-eabi.cmake  st-project.cmake
lib/Triangle Mesh/: TriangleMesh.hpp
lib/TriangleMesh/: TriangleMesh.hpp  helper.hpp  meshwrapper.cpp  meshwrapper.h
lib/common-lib/: .clang-format  README.md
lib/common-lib/inc/: bit_operations.h  critical_section.h  delay.h  errors.hpp  gpio_pin.hpp  high_precision_counter.hpp  interrupt_queue.hpp  memory_operations.hpp  scheduler.hpp  stm32_includer.h  syscall_retarget.hpp  timer_helpers.h
lib/common-lib/src/: errors.cpp  high_precision_counter.cpp  interrupt_queue.cpp  scheduler.cpp  syscall_retarget.cpp  timer_helpers.c
